@@ -34,7 +34,7 @@ AC_PROG_CC
 AC_PROG_LIBTOOL
 
 # Check for dependencies
-PKG_CHECK_MODULES(XPRINTAPPUTIL, x11 xp xprintutil)
+PKG_CHECK_MODULES(XPRINTAPPUTIL, x11 xp xprintutil printproto xau)
 
 AC_SUBST(XPRINTAPPUTIL_CFLAGS)
 AC_SUBST(XPRINTAPPUTIL_LIBS)
